ci(actions): build without provenance
this should fix linux/amd64 showing up as unknown/unknown on ghcr

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -58,6 +58,7 @@ jobs:
           tags: ${{ steps.basemeta.outputs.tags }}
           labels: ${{ steps.basemeta.outputs.labels }}
           push: ${{ github.event_name != 'pull_request' }}
+          provenance: false # workaround, see https://github.com/orgs/community/discussions/45969
           build-args: |
             GITREPO=${{ steps.repositorystring.outputs.lowercase }}
 
@@ -129,6 +130,7 @@ jobs:
           file: install/automated/docker/mariadb-primary.Dockerfile
           tags: ${{ steps.db-primarymeta.outputs.tags }}
           labels: ${{ steps.db-primarymeta.outputs.labels }}
+          provenance: false # workaround, see https://github.com/orgs/community/discussions/45969
           build-args: |
             VERSION=${{env.DB_VERSION}}
       
@@ -140,5 +142,6 @@ jobs:
           file: install/automated/docker/mariadb-eventdb.Dockerfile
           tags: ${{ steps.db-eventmeta.outputs.tags }}
           labels: ${{ steps.db-eventmeta.outputs.labels }}
+          provenance: false # workaround, see https://github.com/orgs/community/discussions/45969
           build-args: |
             VERSION=${{env.DB_VERSION}}
